# otus-c-2018

./: .gitignore  .travis.yml  CMakeLists.txt
src/: CMakeLists.txt
src/hw/: CMakeLists.txt
src/hw/hw01/: CMakeLists.txt  hw01.cpp  hw01_lib.cpp  hw01_lib.h
tests/: CMakeLists.txt
tests/hw/: CMakeLists.txt
tests/hw/hw01/: CMakeLists.txt  test_hw01.cpp
